--- a/facebook.html
+++ b/facebook.html
@@ -12,7 +12,7 @@
         <img src="imagens/tela-facebook.jpg" alt="Facebook">
     </main>
     <footer>
-        <p><a href="">ACESSE</a></p>
+        <p><a href="" target="_blank">ACESSE</a></p>
     </footer>
 </body>
 </html>
