--- a/instagram.html
+++ b/instagram.html
@@ -12,7 +12,7 @@
         <img src="imagens/tela-instagram.jpg" alt="Instagram">
     </main>
     <footer>
-        <p><a href="">ACESSE</a></p>
+        <p><a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE</a></p>
     </footer>
 </body>
 </html>
