--- a/twitter.html
+++ b/twitter.html
@@ -12,7 +12,7 @@
         <img src="imagens/tela-twitter.jpg" alt="Twitter">
     </main>
     <footer>
-        <p><a href="">ACESSE</a></p>
+        <p><a href="" target="_blank">ACESSE</a></p>
     </footer>
 </body>
 </html>
